deploy/kubernetes/self-contained/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
  labels:
    app: draw.io
---
