deploy/kubernetes/self-contained/drawio-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: draw.io
  template:
    metadata:
      labels:
        app: draw.io
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: drawio-env
          image: jgraph/drawio
          imagePullPolicy: IfNotPresent
          name: drawio
          ports:
            - containerPort: 8443
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
      restartPolicy: Always
