deploy/kubernetes/self-contained/image-export-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: image-export
  name: image-export
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: image-export
status:
  loadBalancer: {}
