deploy/kubernetes/self-contained/plantuml-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: plantuml-server
  name: plantuml-server
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: plantuml-server
status:
  loadBalancer: {}
