deploy/kubernetes/self-contained/ingress.yaml
---
# apiVersion: networking.k8s.io/v1beta1 # for k8s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio
spec:
  rules:
    - host: drawio.localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: drawio
              port:
                number: 8080
